<?xml version="1.0"?>
<package>
  <name>rtslamros</name>
  <version>0.0.0</version>
  <description>The rtslamros package</description>

  <author email="emendes@laas.fr">Ellon Paiva Mendes</author>
  <maintainer email="emendes@laas.fr">Ellon Paiva Mendes</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vikit_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>vikit_ros</run_depend>

</package>